# personalsuite-backend-core

./: Dockerfile  README.md  db_config.py  docker-compose.yaml  main.py  module_manager.py  pyproject.toml
core/: allowed_origins.py  exceptions.py  main.py  module_manager.py  security.py
