[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personalsuite-core"
version = "0.1.0"
description = "Core backend for Personal Suite"
authors = [
    { name = "Jesús Ruiz Gallegos", email = "jruizg2233.3@outlook.com" }
]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary"
]
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools]
package-dir = { "" = "." }